--- a/styles/index.css
+++ b/styles/index.css
@@ -130,7 +130,7 @@ ul.content__list {
     display: flex;
     flex-direction: column;
     gap: 30px;
-    height: 306px;
+    height: 300px;
     overflow-y: auto;
 }
 button.button.more-button {
@@ -169,30 +169,23 @@ button.button.search-form__submit-button:active {
     text-decoration: none;
     background: #545050;
 }
-button.button.search-form__submit-button:focus button.button.search-form__submit-button::after {
-    transform: translate(-50%, -50%) scale(1);
+button.button.search-form__submit-button:focus {
+    outline: 1px solid #fff;
+    outline-offset: 3px;
 }
 button.button.search-form__submit-button {
     position: relative;
 }
-button.button.search-form__submit-button::after {
-    content: ' ';
-    width: 202px;
-    height: 43px;
-    border:1px solid #fff;
-    position: absolute;
-    left:50%;
-    top:50%;
-    transform: translate(-50%, -50%) scale(0);
-}
+
 input.search-form__textfield:active {
     border:1px solid #fff
 }
 input.search-form__textfield {
     position: relative;
 }
-input.search-form__textfield:focus input.search-form__textfield::after {
-    transform: translate(-50%, -50%) scale(1);
+input.search-form__textfield:focus {
+    outline: 1px solid #fff;
+    outline-offset: 3px;
 }
 input.search-form__textfield::after {
     content: ' ';
@@ -213,4 +206,14 @@ article.content__video-card:focus {
 }
 article.content__video-card:active {
     background: #545050;
+}
+.result__video-container {
+    position: relative;
+}
+.preloader {
+    width: 100%;
+    height: 100%;
+}
+ul.content__list {
+    position: relative;
 }
