--- a/styles/index.css
+++ b/styles/index.css
@@ -198,3 +198,6 @@ article.content__video-card:active {
 ul.content__list {
     position: relative;
 }
+.visually-hidden {
+    position: absolute;
+}
