--- a/styles/index.css
+++ b/styles/index.css
@@ -2,7 +2,9 @@
     display: flex;
     gap: 30px;
     padding-left: 18px;
+    margin-top: -77px;
 }
+
 .page {
     display: flex;
     justify-content: center;
